<resources>
    <string name="app_name">Maestra Canuta 1.0</string>
    <string name="title_student_list">Students</string>
    <string name="title_student_detail">Student Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Nombre del Maestro</string>
    <string name="pref_default_display_name">Juan Perez</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Mensajes</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Mensajes</string>

    <string name="pref_title_new_message_notifications">Mandar Mensaje a Tutor</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="List_Button">Lista de estudiantes</string>
    <string name="Admin_button">Administrar Estudiantes</string>
    <string name="Config_button">Configuracion</string>
    <string name="AdminTitle">Administración de Estudiantes</string>
    <string name="ButtonNew">Nuevo</string>
    <string name="ButtonDelete">Borrar</string>
    <string name="ButtonEdit">Editar</string>
    <string name="NameText">Nombre</string>
    <string name="TutorText">Tutor</string>
    <string name="PhoneText">Telefono Tutor</string>
    <string name="EmailText">Correo Electronico Tutor</string>
    <string name="ButtonAdd">Crear</string>
    <string name="IdText">Matricula</string>
    <string name="dialog_message_delete">¿Esta seguro que desea borrar este Estudiante?</string>
    <string name="dialog_title_delete">Borrar Estudiante</string>
    <string name="Delete_success">Estudiante borrado con exito</string>
    <string name="Delete_aborted">El estudiante no fue borrado</string>
    <string name="MisconductTitle">Faltas</string>
    <string name="dialog_message_misconduct">¿Esta seguro que desea registrar esta Falta? Un mensaje será enviado al tutor</string>
    <string name="dialog_title_misconduct">Registrar Falta</string>
    <string name="ButtonSaveChanges">Guardar</string>
    <string name="Misconduct_Button">Lista de Faltas</string>
    <string name="Reports_button">Reportes</string>
    <string name="ReportesTitle">Reportes</string>
    <string name="welcome_id_value">Bienvenid@</string>
    <string name="title_misconduct_list">Misconducts</string>
    <string name="title_misconduct_detail">Misconduct Detail</string>
    <string name="TypeText">Tipo</string>
    Delete_success
</resources>
